# NLP-UA-Locations-Extractions

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  location_predictor.py  pyproject.toml  submission_onnx.csv  test_inference.ipynb
app/: app.py  location_predictor.py  main.py
notebooks/: Recurrent_models.ipynb  baseline.ipynb  bert.ipynb  channels.ipynb  create_light_versions.ipynb  descr.ipynb  get_predictions.py  hw5.ipynb  lang_detection.ipynb  lang_pred_review.csv  model_optimizations.ipynb  multibert-combined_train_2.ipynb  multibert-inference.ipynb  multibert_combined_inference.ipynb  multibert_combined_train_1.ipynb  multibert_ru.ipynb  multibert_uk.ipynb  openai_threshold.ipynb  quantization&optimization.ipynb  reponses.json  review_pred.csv  review_pred.ods  review_pred_diff.csv  review_predictions.ipynb  roberta_uk.ipynb  spacyner-baseline.ipynb
submissions/: .directory  gpt_corrections_091.csv  multibert.csv  multibert_comb_093.csv  multibert_flear.csv  multibert_sep_ukru.csv  multibert_sep_ukru_093.csv  multibert_spacy_union.csv  multibert_ukru_lingua.csv  multibert_ukru_lingua_00_ot.csv  multibert_ukru_lingua_00_ot_stoprows4_n.csv  multibert_ukru_lingua_080_ot_stoprows4.csv  multibert_ukru_lingua_0890_ot_stoprows4_n.csv  multibert_ukru_lingua_090.csv  multibert_ukru_lingua_0906_ot_stoprows4_n.csv  multibert_ukru_lingua_0906_ot_stoprows4_n_gpt091.csv  multibert_ukru_lingua_090_ot.csv  multibert_ukru_lingua_090_ot_stoprows4.csv  multibert_ukru_lingua_090_ot_stoprows4_n.csv  multibert_ukru_lingua_0910_ot_stoprows4_n.csv  multibert_w_langd.csv  (+17 more)
(+1 files in other folders)
